--- a/html/slider-rgb/index.html
+++ b/html/slider-rgb/index.html
@@ -16,13 +16,13 @@
 
 <fieldset>
   <label for="saturation">S</label>
-  <input type="range" class="gray-scale" min="0" max="100" id="saturation" step="1" value="0">
+  <input type="range" class="saturation-scale" min="0" max="100" id="saturation" step="1" value="0">
   <output for="saturation" id="outputSaturation">0</output>
 </fieldset>
 
 <fieldset>
   <label for="light">L</label>
-  <input type="range" class="gray-scale" min="0" max="100" id="light" step="1" value="0">
+  <input type="range" class="light-scale" min="0" max="100" id="light" step="1" value="0">
   <output for="light" id="outputLight">0</output>
 </fieldset>
  
